improved inventory support